# dodeca

./: .gitignore  AGENTS.md  Cargo.toml  package.nix
cells/cell-css/src/: main.rs
cells/cell-data/: Cargo.toml
cells/cell-data-proto/: Cargo.toml
cells/cell-data-proto/src/: lib.rs
cells/cell-data/src/: main.rs
cells/cell-dialoguer/src/: main.rs
cells/cell-fonts/src/: main.rs
cells/cell-gingembre-proto/: Cargo.toml
cells/cell-gingembre-proto/src/: lib.rs
cells/cell-gingembre/src/: main.rs
cells/cell-host-proto/src/: lib.rs
cells/cell-html-diff/src/: main.rs
cells/cell-html/src/: main.rs
cells/cell-http/src/: tunnel.rs
cells/cell-image/src/: main.rs
cells/cell-js/src/: main.rs
cells/cell-jxl/src/: main.rs
cells/cell-linkcheck/src/: main.rs
cells/cell-markdown/: Cargo.toml
cells/cell-markdown-proto/src/: lib.rs
cells/cell-markdown/src/: main.rs
cells/cell-sass/src/: main.rs
cells/cell-term/src/: main.rs
cells/cell-tui/src/: main.rs
cells/cell-vite/src/: main.rs
cells/cell-webp/src/: main.rs
crates/dodeca/: Cargo.toml
crates/dodeca-cell-runtime/: Cargo.toml
crates/dodeca-config/src/: lib.rs
crates/dodeca-devtools/src/: state.rs
crates/dodeca-sandbox/src/: lib.rs  macos.rs
crates/dodeca/src/: build_steps.rs  cell_server.rs  cells.rs  config.rs  content_service.rs  data.rs  db.rs  host.rs  logging.rs  main.rs  queries.rs  serve.rs  template_host.rs
crates/dodeca/src/protocols/: gemini.rs  gopher.rs  html.rs  mod.rs
crates/hotmeal-wasm/: Cargo.toml
crates/hotmeal-wasm/src/: lib.rs
crates/hotmeal/src/: dom.rs
crates/integration-tests/src/: harness.rs  main.rs
crates/integration-tests/src/tests/: build_steps.rs  mod.rs  protocols.rs
landing/: .gitignore
landing/.config/: dodeca.styx
landing/content/: 404.md  _index.md  dashboard.md  features.md  pricing.md
landing/data/: footer.toml  integrations.toml  navigation.toml
landing/static/: landing.css
landing/templates/: base.html  index.html  page.html
