[workspace]
members = ["crates/*", "cells/*", "xtask"]
default-members = ["crates/*", "cells/*"]
resolver = "3"

# getrandom is required for wasm32 targets (enables wasm_js feature)
# but cargo-shear doesn't detect it since it's feature-activated, not imported
[workspace.metadata.cargo-shear]
# getrandom: required for wasm32 targets (feature-activated)
# facet-default: required by Facet derive macro (transitive)
ignored = ["getrandom", "facet-default"]

[workspace.dependencies]
# Core utilities
camino = "1.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dashmap = "6"
indexmap = "2"
indextree = "4"
im = "15"
regex = "1.12"
heck = "0.5"
globset = "0.4"
url = "2"

# proc-macro dependencies (for picante-macros)
proc-macro2 = "1"
quote = "1"
unsynn = "0.3"

# Error handling
ariadne = "0.5"
color-eyre = "0.6"
eyre = "0.6"
thiserror = "2.0"

# Async runtime
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
tokio = { version = "1.48", features = [
  "full",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-test-lite = "0.2"

# HTTP/networking
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
if-addrs = "0.14"
reqwest = { version = "0.13", features = ["blocking"] }
tokio-tungstenite = "0.26"
ureq = { version = "3", default-features = false }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "smallvec",
  "std",
] }

# Serialization - Facet ecosystem (inlined)
cinereus = { path = "crates/cinereus" }
hotmeal = { path = "crates/hotmeal" }
hotmeal-server = { path = "crates/hotmeal-server", features = ["tracing"] }
hotmeal-wasm = { path = "crates/hotmeal-wasm" }

facet = "0.46"
facet-core = "0.46"
facet-default = "0.46"
facet-format = "0.47"
facet-json = "0.46"
facet-postcard = "0.46"
facet-toml = "0.46"
facet-value = "0.46"
facet-yaml = "0.46"
facet-reflect = "0.46"
facet-testhelpers = "0.46"
facet-error = "0.46"

facet-styx = "3.0"
styx-embed = "3.0"

figue = "2.0"

# RPC framework (vox)
vox = { version = "0.4", default-features = false, features = ["runtime"] }
vox-core = "0.4"
vox-fdpass = "0.4"
vox-local = "0.4"
vox-websocket = "0.4"

# Process lifecycle
ur-taking-me-with-you = { version = "7.3", features = [
  "tokio",
] }

# Incremental computation (inlined)
picante = { path = "crates/picante" }
picante-macros = { path = "crates/picante-macros" }

# File system
fs-err = "3"
ignore = "0.4"
notify = "8"
tempfile = "3.24"

# CLI/TUI
crossterm = "0.29"
dialoguer = "0.12"
include_dir = "0.7"
owo-colors = "4"
ratatui = "0.30"
structstruck = "0.5"
html-escape = "0.2"
aasvg = "1.0"
pikru = "1.2"
arborium = { version = "2", default-features = false }

# CSS processing
lightningcss = { version = "1.0.0-alpha.68", features = ["visitor"] }
grass = { version = "0.13", features = ["macro"] }

# JavaScript processing
oxc = { version = "0.105", features = ["full"] }

# hotmeal/cinereus deps
compact_str = "0.9"
smallvec = "1"
html5ever = "0.38"
tendril = "0.5"
divan = "0.1"
datatest-stable = "0.3"
trybuild = "1"

# Image processing
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg", "gif"] }
jpegxl-rs = { version = "0.11", features = ["vendored"] }
thumbhash = "0.1"
webp = "0.3"

# Font processing
fontcull = { version = "2.0", default-features = false }

# Markdown
pulldown-cmark = "0.13"
arborium-theme = "2"
html_parser = "0.7"
marq = { path = "crates/marq" }
vox-stream = "0.4"
vox-types = "0.4"

# SVG optimization (git)
svag = "0.1.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2"
wasm-tracing = "0.2"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "CloseEvent",
  "Document",
  "Element",
  "ErrorEvent",
  "HtmlElement",
  "HtmlLinkElement",
  "Location",
  "MessageEvent",
  "Node",
  "NodeList",
  "Text",
  "WebSocket",
  "Window",
  "console",
] }
libc = "0.2"
rapidhash = "4"
strid = { path = "crates/strid" }
strid-macros = { path = "crates/strid-macros" }
# strid = { path = "../strid/crates/strid" }

# Misc utilities
open = "5"

# Linux-only
hakoniwa = "1.2"

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["bearcove"]
repository = "https://github.com/bearcove/dodeca"
homepage = "https://dodeca.bearcove.eu/"
rust-version = "1.91"

#
# Local patches for debugging / migration stabilization
#
[patch.crates-io]
vox-core = { path = "vendor/vox-core" }

#
# NOTE: The old `[patch.crates-io]` section that pointed at moving git branches
# makes lockfile refreshes brittle. We remove it for Nix builds and rely on the
# lockfile + explicit git deps instead.

# Uncomment to use local facet for development
# [patch.crates-io]
# cinereus = { path = "../hotmeal/cinereus" }
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local figue for development
# [patch."https://github.com/bearcove/figue"]
# figue = { path = "../figue/crates/figue" }

# Uncomment to use local hotmeal for development
# [patch."https://github.com/bearcove/hotmeal"]
# cinereus = { path = "../hotmeal/cinereus" }
# hotmeal = { path = "../hotmeal/hotmeal" }
# hotmeal-server = { path = "../hotmeal/hotmeal-server" }
# hotmeal-wasm = { path = "../hotmeal/hotmeal-wasm" }

# [patch."https://github.com/bearcove/marq"]
# marq = { path = "../marq" }

# [patch."https://github.com/facet-rs/facet-xml"]
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }

# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Patch git dependencies to use local facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-default = { path = "../facet/facet-default" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-format = { path = "../facet/facet-format" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local styx for development
# [patch."https://github.com/bearcove/styx"]
# facet-styx = { path = "../styx/crates/facet-styx" }
# styx-parse = { path = "../styx/crates/styx-parse" }
# styx-format = { path = "../styx/crates/styx-format" }
# styx-embed = { path = "../styx/crates/styx-embed" }
# styx-embed-macros = { path = "../styx/crates/styx-embed-macros" }

# Optimize dependencies in dev mode for faster tests
# (keeps main crate unoptimized for fast incremental builds)
[profile.dev.package."*"]
opt-level = 2

# Reduce debug info size (line tables only, no variable info)
# Light optimization for better runtime without killing incremental builds
[profile.dev]
debug = "line-tables-only"
opt-level = 1
# On macOS, split debug info for faster linking
split-debuginfo = "unpacked"

# Fast compilation profile for rapid iteration
# Uses cranelift backend (faster than LLVM, less optimized output)
# Usage: cargo +nightly build --profile fast -Zcodegen-backend
[profile.fast]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"

# Test profile with full debug symbols for profiling
[profile.test]
inherits = "dev"
debug = true

# Release profile with reduced debug info for smaller binaries
[profile.release]
debug = "line-tables-only"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debug-friendly profile for investigating mysteries (hangs, crashes, etc.)
# Usage: cargo build --profile mystery
[profile.mystery]
inherits = "release"
opt-level = 1
debug = true
strip = false

[workspace.lints.rust]
unsafe_code = "forbid"
mismatched_lifetime_syntaxes = "deny"
unused_imports = "deny"
unused_must_use = "deny"
dead_code = "deny"
unstable_name_collisions = "deny"
unused_assignments = "deny"
deprecated = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# deny
filetype_is_file = "deny"
cargo = { level = "warn", priority = -1 }
panic = "deny"
match_like_matches_macro = "deny"
needless_update = "deny"
unwrap_used = "warn"
expect_used = "warn"

# allow
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
empty_docs = "allow"
unnecessary_debug_formatting = "allow"
result_large_err = "allow"
useless_conversion = "allow"
needless_lifetimes = "allow"

# allow
significant_drop_tightening = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
