[package]
name = "cell-data-proto"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-postcard.workspace = true
facet-value.workspace = true
vox.workspace = true
