[package]
name = "cell-markdown"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-markdown"
path = "src/main.rs"

[dependencies]
cell-markdown-proto = { path = "../cell-markdown-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
facet-postcard = { workspace = true }
marq = { workspace = true, features = ["highlight", "aasvg"] }
