[package]
name = "dodeca-cell-runtime"
version = "0.6.1"
edition = "2024"

[features]
default = []
cell-debug = []

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
cell-host-proto = { path = "../../cells/cell-host-proto" }
dodeca-debug = { path = "../dodeca-debug" }
vox = { workspace = true, features = ["transport-local"] }
vox-types.workspace = true
vox-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ur-taking-me-with-you.workspace = true
