[package]
name = "dodeca"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
description = "A fully incremental static site generator"
repository = "https://github.com/bearcove/dodeca"
homepage = "https://dodeca.bearcove.eu/"
keywords = ["static-site", "ssg", "incremental"]
categories = ["command-line-utilities", "web-programming"]
default-run = "ddc"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc"
path = "src/main.rs"

[dependencies]
cell-code-execution-proto = { path = "../../cells/cell-code-execution-proto" }
cell-vite-proto = { path = "../../cells/cell-vite-proto" }
dodeca-config = { path = "../dodeca-config" }
cell-lifecycle-proto = { path = "../../cells/cell-lifecycle-proto" }
cell-dialoguer-proto = { path = "../../cells/cell-dialoguer-proto" }
cell-css-proto = { path = "../../cells/cell-css-proto" }
cell-data-proto = { path = "../../cells/cell-data-proto" }
cell-gingembre-proto = { path = "../../cells/cell-gingembre-proto" }
cell-host-proto = { path = "../../cells/cell-host-proto" }
cell-fonts-proto = { path = "../../cells/cell-fonts-proto" }
cell-html-diff-proto = { path = "../../cells/cell-html-diff-proto" }
cell-html-proto = { path = "../../cells/cell-html-proto" }
cell-http-proto = { path = "../../cells/cell-http-proto" }
cell-image-proto = { path = "../../cells/cell-image-proto" }
cell-js-proto = { path = "../../cells/cell-js-proto" }
cell-jxl-proto = { path = "../../cells/cell-jxl-proto" }
cell-linkcheck-proto = { path = "../../cells/cell-linkcheck-proto" }
cell-markdown-proto = { path = "../../cells/cell-markdown-proto" }
cell-minify-proto = { path = "../../cells/cell-minify-proto" }
cell-sass-proto = { path = "../../cells/cell-sass-proto" }
cell-svgo-proto = { path = "../../cells/cell-svgo-proto" }
cell-term-proto = { path = "../../cells/cell-term-proto" }
cell-tui-proto = { path = "../../cells/cell-tui-proto" }
cell-webp-proto = { path = "../../cells/cell-webp-proto" }
dodeca-debug = { path = "../dodeca-debug" }
dodeca-protocol = { path = "../dodeca-protocol" }

# Workspace dependencies
arborium-theme.workspace = true
camino.workspace = true
chrono.workspace = true
dashmap.workspace = true
eyre.workspace = true
facet.workspace = true
figue.workspace = true

facet-json.workspace = true
facet-postcard.workspace = true
facet-styx.workspace = true
styx-embed.workspace = true
facet-value.workspace = true
futures-util.workspace = true
if-addrs.workspace = true
ignore.workspace = true
include_dir.workspace = true
notify.workspace = true
open.workspace = true
owo-colors.workspace = true
picante.workspace = true
vox = { workspace = true, features = ["transport-local"] }
vox-core.workspace = true
tracing.workspace = true
vox-fdpass.workspace = true
vox-local.workspace = true
rapidhash.workspace = true
arboard = { version = "3", default-features = false }
strid.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
ur-taking-me-with-you.workspace = true
hotmeal-server.workspace = true
html-escape.workspace = true
html_parser.workspace = true
ariadne.workspace = true

[build-dependencies]
dodeca-config = { path = "../dodeca-config" }
facet-styx.workspace = true

[dev-dependencies]
tokio.workspace = true
